--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,2 +1,18 @@
-<h1>Welcome to Sinatra!</h1>
-<p>Hello, world!</p>
+<h1>Welcome to the Flashcard App. We will put more exciting text in later.</h1>
+<p>You need to sign in</p>
+<br><br>
+
+<form action="/user/login/" method="post">
+  <label for="user_name">Username:</label><br>
+  <input type="text" name="user_name" id="user_name"><br>
+  <label for="password">Password:</label><br>
+  <input type="password" name="password" id="password"><br>
+
+  <input type="submit" value="submit">
+
+</form><br><br>
+
+<a href="/sign_up">Sign Up</a>
+
+
+
