--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,11 +2,11 @@
 <p>You need to sign in</p>
 <br><br>
 
-<form action="/user/login/" method="post">
+<form action="/user/login/" method="get">
   <label for="user_name">Username:</label><br>
-  <input type="text" name="user_name" id="user_name"><br>
+  <input type="text" name="user[user_name]" id="user_name"><br>
   <label for="password">Password:</label><br>
-  <input type="password" name="password" id="password"><br>
+  <input type="password" name="user[password]" id="password"><br>
 
   <input type="submit" value="submit">
 
