Logic working to move through pages
We can now create a deck, store the cards in sessions, go through the cards, and on the last one go to a stats page. The navigation logic works, now we just need to incorporate the logic for counting right and wrong answers and displaying stats.

--- a/app/views/start_round.erb
+++ b/app/views/start_round.erb
@@ -1,4 +1,7 @@
 <div id = "game">
-  <h1><%= @deck.title %></h1>
-  <a href ="/round/question/<%= @deck.id %>">Get question</a>
+  <h1><%= session[:deck_title]%></h1>
+
+  <a href ="/round/card/<%=session[:cards].pop.id%>">Get question</a>
+
+
 </div>
