--- a/app/views/stats.erb
+++ b/app/views/stats.erb
@@ -1,5 +1,9 @@
 <h1>These are your stats:</h1>
 
 
-<h3>Correct answers</h3>
+<h3>Correct answers: <%=@round.guesses.where(correct?: true).count%> !</h3>
+
+<h3>Wrong answers: <%=@round.guesses.where(correct?: false).count%> !</h3>
+
+<p> Not too bad for a rookie</p>
 
