--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,18 +1,26 @@
-<h1>Welcome to the Flashcard App. We will put more exciting text in later.</h1>
-<p>You need to sign in</p>
-<br><br>
 
-<form action="/user/login/" method="get">
-  <label for="user_name">Username:</label><br>
-  <input type="text" name="user[user_name]" id="user_name"><br>
-  <label for="password">Password:</label><br>
-  <input type="password" name="user[password]" id="password"><br>
 
-  <input type="submit" value="submit">
+<%unless @user %>
+  <h1>Welcome to the Flashcard App. We will put more exciting text in later.</h1>
+  <p>You need to sign in</p>
+  <br><br>
 
-</form><br><br>
+  <form action="/user/login/" method="get">
+    <label for="user_name">Username:</label><br>
+    <input type="text" name="user[user_name]" id="user_name"><br>
+    <label for="password">Password:</label><br>
+    <input type="password" name="user[password]" id="password"><br>
 
-<a href="/sign_up">Sign Up</a>
+    <input type="submit" value="submit">
+
+  </form><br><br>
+
+  <a href="/sign_up">Sign Up</a>
+<%else%>
+  <h1>Welcome back to the Flashcard App <%=@user.user_name%>!!!</h1>
+  <a href = "/decks/">See available decks</a>
+<%end%>
+
 
 
 
