People need to be able to log in and sign up.
Added the ability to log in and sign up.

--- a/app/views/sign_up.erb
+++ b/app/views/sign_up.erb
@@ -1,8 +1,4 @@
-<h1>Welcome to the Flashcard App. We will put more exciting text in later.</h1>
-<p>You need to sign in</p>
-<br><br>
-
-<form action="/user/login/" method="get">
+<form action="/user/create" method="post">
   <label for="user_name">Username:</label><br>
   <input type="text" name="user[user_name]" id="user_name"><br>
   <label for="password">Password:</label><br>
@@ -11,8 +7,3 @@
   <input type="submit" value="submit">
 
 </form><br><br>
-
-<a href="/user/create">Sign Up</a>
-
-
-
