game now shows you whether you answered the previous question right or wrong. Eliminated trailing slashes on urls.

--- a/app/views/stats.erb
+++ b/app/views/stats.erb
@@ -1,4 +1,4 @@
-<a href="/log_out/">Log Out</a><br>
+<a href="/log_out">Log Out</a><br>
 
 <h1>These are your stats:</h1>
 <h3>Correct answers: <%=@round.guesses.where(correct?: true).count%> !</h3>
@@ -8,3 +8,4 @@
 <p> Not too bad for a rookie</p>
 
 <a href="/">Home</a>
+<a href = "/user/profile">See your previous game stats</a>
