--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -5,7 +5,7 @@
   <p>You need to sign in</p>
   <br><br>
 
-  <form action="/user/login/" method="get">
+  <form action="/user/login" method="get">
     <label for="user_name">Username:</label><br>
     <input type="text" name="user[user_name]" id="user_name"><br>
     <label for="password">Password:</label><br>
@@ -18,7 +18,8 @@
   <a href="/sign_up">Sign Up</a>
 <%else%>
   <h1>Welcome back to the Flashcard App <%=@user.user_name%>!!!</h1>
-  <a href = "/decks/">See available decks</a>
+  <a href = "/decks">See available decks</a>
+  <a href = "/user/profile">See your previous game stats</a>
 <%end%>
 
 
