--- a/app/views/run_card.erb
+++ b/app/views/run_card.erb
@@ -1,15 +1,21 @@
-<a href="/log_out/">Log Out</a><br>
+<a href="/log_out">Log Out</a><br>
 
 <h1><%= session[:deck_title]%></h1>
+  <%if session[:previous_answer]%>
+    You got the last one right!
+  <%elsif session[:previous_answer] == false%>
+    You got the last one wrong!
+  <%end%>
 
-<h3>Question:</h3>
-<p><%= @card.question%>
 
 
-<%if session[:cards].empty?%>
-  <p>This was your last question!!!!</p>
-<%end%>
 
+<%unless @card%>
+  <p>That was your last question!!!!</p>
+  <a href="/round/stats">See Your Game Stats</a>
+<%else%>
+  <h3>Question:</h3>
+  <p><%= @card.question%>
   <form id ="question" action = '/card/answer/<%=@card.id%>' method="post">
     <label for="answer">Answer:</label><br>
     <input type="text" name="answer" id="answer">
@@ -17,4 +23,5 @@
     <input type="submit" value="submit">
   </form>
 
+<%end%>
 
