logout links now point to the right route
The logout links were pointing to /log_out when the actual route
was /user/logout. So I fixed the links.

--- a/app/views/run_card.erb
+++ b/app/views/run_card.erb
@@ -1,4 +1,4 @@
-<a href="/log_out">Log Out</a><br>
+<a href="/user/logout">Log Out</a><br>
 
 <h1><%= session[:deck_title]%></h1>
   <%if session[:previous_answer]%>
