--- a/app/views/start_round.erb
+++ b/app/views/start_round.erb
@@ -1,4 +1,4 @@
-<a href="/log_out">Log Out</a><br>
+<a href="/user/logout">Log Out</a><br>
 
 <div id = "game">
   <h1><%= session[:deck_title]%></h1>
