--- a/app/views/stats.erb
+++ b/app/views/stats.erb
@@ -1,4 +1,4 @@
-<a href="/log_out">Log Out</a><br>
+<a href="/user/logout">Log Out</a><br>
 
 <h1>These are your stats:</h1>
 <h3>Correct answers: <%=@round.guesses.where(correct?: true).count%> !</h3>
