--- a/app/views/user_profile.erb
+++ b/app/views/user_profile.erb
@@ -1,4 +1,4 @@
-<a href="/log_out">Log Out</a><br>
+<a href="/user/logout">Log Out</a><br>
 Hi there <%=@user.user_name%>!!
 Here are your previous game stats:<br>
 <ul>
