--- a/app/views/run_card.erb
+++ b/app/views/run_card.erb
@@ -19,7 +19,7 @@
   <form id ="question" action = '/card/answer/<%=@card.id%>' method="post">
     <label for="answer">Answer:</label><br>
     <input type="text" name="answer" id="answer">
-    <input type="text" name="correct" value="<%=@card.answer%>" style = "display:none;">
+    <input type="text" name="correct" value="<%=@card.answer%>" class="invisible">
     <input type="submit" value="submit">
   </form>
 
