user can now view their own decks. Have nonfunctioning button for user to edit their own decks.

--- a/app/views/decks.erb
+++ b/app/views/decks.erb
@@ -7,7 +7,12 @@
   <%end%>
 </ul>
 
-
+<a href="/">Home</a>
+<%unless @my_decks %>
+  <a href="/user/decks">View My Decks</a>
+<%else%>
+  <a href="/decks/edit">Edit decks</a>
+<%end%>
 
 
 
