Too many things in one commit
Fixed redirect issues

Added some ajax

Fixed issue where everything blew up when you logged in with wrong user/pass

--- a/app/views/add_card.erb
+++ b/app/views/add_card.erb
@@ -9,8 +9,10 @@
 </form>
 
 <% if @has_card%>
-Is your deck finished?<br>
-<a href ="/decks">Save Deck</a>
+<p>Is your deck finished?</p><br>
+<div class="bottom">
+  <a href ="/decks">Save Deck</a>
+</div>
 <%end%>
 
 
