--- a/app/views/edit_deck.erb
+++ b/app/views/edit_deck.erb
@@ -1,3 +1,3 @@
 
-<a id="delete_deck"href="/decks/delete/<%= @deck.id%>">Delete deck</a>
-<a href="/deck/add_cards/<%= @deck.id%>">Add cards to deck</a>
+<a id="delete_deck" href="/decks/delete/<%= @deck.id%>">Delete deck</a>
+<a href="/decks/add_card/<%= @deck.id%>">Add card to deck</a>
