--- a/app/views/decks.erb
+++ b/app/views/decks.erb
@@ -1,4 +1,4 @@
-<a href="/user/logout">Log Out</a><br>
+<a class = "logout" href="/user/logout">Log Out</a><br>
 
 <h1>Here are all the decks.</h1>
 <ul>
@@ -6,15 +6,15 @@
     <li><a href='/round/<%=deck.id%>'><%=deck.title%></a></li>
   <%end%>
 </ul>
-
-<a href="/">Home</a><br>
-<%unless @my_decks %>
-  <a href="/user/decks">View My Decks</a><br>
-<%else%>
-  <a href="/decks/edit">Edit decks</a><br>
-<%end%>
-
-<a href="/decks/create">Create Deck</a>
+<div class="bottom">
+  <a href="/">Home</a>
+  <%unless @my_decks %>
+    <a href="/user/decks">View My Decks</a>
+  <%else%>
+    <a href="/decks/edit">Edit decks</a>
+  <%end%>
+  <a href="/decks/create">Create Deck</a>
+</div>
 
 
 
