--- a/app/views/sign_up.erb
+++ b/app/views/sign_up.erb
@@ -7,5 +7,6 @@
   <input type="submit" value="submit">
 
 </form><br><br>
-
-<a href="/">Home</a>
+<div class="bottom">
+  <a href="/">Home</a>
+</div>
