--- a/app/views/stats.erb
+++ b/app/views/stats.erb
@@ -1,4 +1,3 @@
-<a href="/user/logout">Log Out</a><br>
 
 <h1>These are your stats:</h1>
 <h3>Correct answers: <%=@round.guesses.where(correct?: true).count%> !</h3>
@@ -6,6 +5,7 @@
 <h3>Wrong answers: <%=@round.guesses.where(correct?: false).count%> !</h3>
 
 <p> Not too bad for a rookie</p>
-
-<a href="/">Home</a>
-<a href = "/user/profile">See your previous game stats</a>
+<div class="bottom">
+  <a href="/">Home</a>
+  <a href = "/user/profile">All stats</a>
+</div>
