--- a/app/views/decks.erb
+++ b/app/views/decks.erb
@@ -1,11 +1,9 @@
-<a class = "logout" href="/user/logout">Log Out</a><br>
+<h1>Get funky with flashcards</h1>
 
-<h1>Here are all the decks.</h1>
-<ul>
   <%@decks.each do |deck|%>
-    <li><a href='/round/<%=deck.id%>'><%=deck.title%></a></li>
+        <a href='/round/<%=deck.id%>'><div class="deck"><%=deck.title%></div></a>
   <%end%>
-</ul>
+
 <div class="bottom">
   <a href="/">Home</a>
   <%unless @my_decks %>
