--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,25 +1,24 @@
 <div class ="left_container">
   <%unless @user %>
-    <h1>Welcome to the Flashcard App. We will put more exciting text in later.</h1>
+    <h1>Learn fast. Learn fresh. Learn funky.</h1>
     <% if  session[:status] == "logged in" %>
       <p> Welcome, user # <%= session[:user_id] %> </p>
-    <% else %>
-      <p>You need to sign in</p>
     <% end %>
     <br><br>
 
     <form action="/user/login" method="get">
       <label for="user_name">Username:</label><br>
-      <input type="text" name="user[user_name]" id="user_name"><br>
+      <input type="text" name="user[user_name]" id="user_name" autofocus><br>
       <label for="password">Password:</label><br>
       <input type="password" name="user[password]" id="password"><br>
-      <input type="submit" value="submit">
+      <input type="submit" value="submit" class="submit">
     </form><br><br>
-    <a href="/user/create">Sign Up</a>
-  <%else%>
-    <a class="logout" href="/user/logout">Log Out</a><br>
     <div class="bottom">
-      <h1>Welcome back to the Flashcard App <%=@user.user_name%>!!!</h1>
+      <a href="/user/create" class ="sign_up">Sign Up</a>
+    </div>
+  <%else%>
+    <div class="bottom">
+      <h1><%=@user.user_name%>, are you ready for some funky fun?!</h1>
       <a href ="/decks">Available decks</a>
       <a href ="/user/profile">Profile</a>
       <a href="/decks/create">Create Deck</a>
