--- a/app/views/user_profile.erb
+++ b/app/views/user_profile.erb
@@ -1,13 +1,23 @@
-<a href="/user/logout">Log Out</a><br>
 <h4>Hi there <%=@user.user_name%>!!</h4>
 <% if @user.rounds.empty? %>
   <h4>You have no stats yet, why not <a href="/decks" class="inline">try out a deck</a></h4>
 <%else %>
-  <h4>Here are your previous game stats:</h4><br>
-  <ul>
+   <h4>Here are your previous game stats:</h4><br>
+  <table class="user_stats">
+    <tr>
+      <td><i class="fa fa-tasks"></i></td>
+      <td><i class="fa fa-smile-o"></i></td>
+      <td><i class="fa fa-meh-o"></i></td>
+    </tr>
+
     <%@user.rounds.each do |round| %>
-    <li>deck: <%=round.deck.title%> &nbsp;&nbsp;|&nbsp;&nbsp; correct: <%= round.guesses.where(correct?: true).count%>&nbsp;&nbsp; |&nbsp;&nbsp;     wrong: <%= round.guesses.where(correct?: false).count%></li>
+    <tr>
+      <td><%=round.deck.title%></td>
+      <td><%= round.guesses.where(correct?: true).count%></td>
+      <td><%= round.guesses.where(correct?: false).count%></td>
+    </tr>
     <%end%>
+  </table>
 <%end%>
 
 <div class="bottom">
