--- a/public/css/application.css
+++ b/public/css/application.css
@@ -3,13 +3,45 @@
 }*/
 body {
   font-family: 'Gabriela', serif;
+  background-color:#9C9C9C;
+}
+
+
+
+.nav {
+  background-color:#4F3F57;
+  padding: 40px 0;
+  height:75px;
+  /*overflow:auto;*/
+}
+
+.nav a {
+  text-decoration:none;
+  float:right;
+  margin-right:40px;
+  color:#bbb;
+  font-size:50px;
+}
+
+.nav a:hover{
+  color:#fff;
+  font-size:60px;
+}
+
+.nav h1 {
+  position:relative;
+  top: -25px;
+  margin: 0;
+  display:inline;
+  font-size: 150px;
+  color:#eee;
+  letter-spacing: -5px;
 }
 
 .container {
   margin: 20px auto;
-  width: 600px;
+  width: 800px;
   padding: 0px 20px 20px 20px;
-  border: 1px dotted black;
   overflow: auto;
 }
 
@@ -31,13 +63,101 @@ body {
   background-image: url('./flashcardsdeck.gif');
 }
 
+ul {
+  padding:0;
+}
+
+ul li{
+  list-style:none;
+  font-size:30px;
+  margin-bottom:15px;
+}
+
+ul li a{
+  text-decoration:none
+}
+
+h1 {
+  font-size: 50px;
+/*  text-align:center;*/
+}
+
+form {
+  text-align: center;
+}
+
+form input {
+  width:400px;
+  margin:10px;
+  font-size:30px;
+  border-radius:10px;
+}
+
+form label {
+  font-size:25px;
+}
+
 th {
   text-align: left;
 }
 
+h3 {
+  font-size: 40px;
+}
+
+p {
+  font-size: 25px;
+}
+
+.center {
+  /*add this center class to set
+  horizontal center alignment*/
+  text-align: center;
+}
+
+.deck {
+  /*float:left;*/
+  display: inline-block;
+  overflow: auto;
+  margin:10px;
+  text-align: center;
+  background-color: white;
+  width:30%;
+  height: 100px;
+  border-radius:20px;
+  font-size: 25px;
+  opacity: 0.7;
+}
+
+.deck:hover {
+  opacity: 1;
+}
+
+.deck a{
+  text-decoration: none;
+  z-index: 1;
+}
 
 .invisible {
   display:none;
+}
+
+.user_stats {
+  width: 100%;
+  font-size:25px;
+}
+
+.user_stats tr {
+  border-bottom: 1px solid gray;
+}
+
+.user_stats td {
+  padding: 10px 0;
+  width:55%;
+}
+
+.user_stats .fa {
+  font-size: 40px
 }
 
 
@@ -55,31 +175,33 @@ th {
 }
 
 .bottom {
-  overflow: auto;
+  text-align: center;
+  position:relative;
 }
-a {
 
-}
 .bottom a {
-  display:inline;
-  float: left;
+  display:block;
+  clear:both;
+  color: #fff;
   text-decoration:none;
-  margin: 30px 0 0 0;
-  padding: 3px 5px;
-  background: #DBDBDB;
-  border: 2px solid #BDBFBF;
+  margin: 0 auto;
+  margin-bottom:20px;
+  padding: 10px 125px;
+  background: #66427e;
+  border-bottom: 4px solid #B6BDBD;
+  border-right: 4px solid #B6BDBD;
   border-radius: 5px;
+  font-size:23px;
 }
 .bottom a:hover{
-  background: #C7C9C9;
-  border: 2px solid #8C8E8F;
-}
+/*  background: #210B30;
+  border: 4px solid #B6BDBD;*/
+  opacity: 0.8;
+ }
 
-h1 {
-  display: block;
-  /*font-family: 'Gabriela', serif;*/
+.bottom a.sign_up {
+  display: inline-block;
 }
-
 
 
 .logout {
