--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -22,7 +22,9 @@
 <body>
   <div class="nav">
     <h1>Funky Cards</h1>
-    <a href="/user/logout"><i class="fa fa-share-square-o"></i></a>
+      <% if  session[:status] == "logged in" %>
+        <a href="/user/logout"><i class="fa fa-share-square-o"></i></a>
+      <% end %>
     <a href = "/"><i class="fa fa-home"></i></a>
   </div>
 
