--- a/app/views/user_profile.erb
+++ b/app/views/user_profile.erb
@@ -1,8 +1,8 @@
-<h4>Hi there <%=@user.user_name%>!!</h4>
+<h3>Hi there <%=@user.user_name%>!!</h3>
 <% if @user.rounds.empty? %>
-  <h4>You have no stats yet, why not <a href="/decks" class="inline">try out a deck</a></h4>
+  <p>You have no stats yet, why not <a href="/decks" class="inline">try out a deck</p></h3>
 <%else %>
-   <h4>Here are your previous game stats:</h4><br>
+   <p>Here are your previous game stats:</p><br>
   <table class="user_stats">
     <tr>
       <td><i class="fa fa-tasks"></i></td>
