--- a/app/views/decks_to_edit.erb
+++ b/app/views/decks_to_edit.erb
@@ -1,9 +1,9 @@
-<h3>Choose a deck to edit:</h3>
-<ul>
+<h1>Choose a deck to edit:</h1>
+
 <% @decks.each do |deck| %>
-  <li><a class="edit" href="/decks/edit/<%=deck.id%>"><%= deck.title %></a><div class="edit_links"></div></li>
+<a class="edit" href="/decks/edit/<%=deck.id%>"><div class="deck"><%= deck.title %></div></a><div class="edit_links"></div>
 <% end %>
-</ul>
+
 
 <div class="bottom">
   <a href="/">Home</a><br>
