--- a/public/css/application.css
+++ b/public/css/application.css
@@ -6,7 +6,9 @@ body {
   background-color:#9C9C9C;
 }
 
-
+a {
+  color:#111;
+}
 
 .nav {
   background-color:#4F3F57;
@@ -79,6 +81,8 @@ ul li a{
 
 h1 {
   font-size: 50px;
+  color: #9c9c9c;
+  text-shadow: 0px 0px 30px #383A42;
 /*  text-align:center;*/
 }
 
@@ -162,12 +166,17 @@ p {
 
 
 .edit_links a{
-  display: inline;
+  display: inline-block;
+  color: #333;
   padding: 0 5px;
   margin : 20px 15px;
-  background: #C8DDE3;
-  border: 2px solid #8ADCF2;
-  font-size: 0.8em;
+  border: 2px solid #333;
+  border-radius: 20px;
+  font-size: 1.5em;
+}
+
+#delete_deck:hover{
+  color: #DD0022;
 }
 
 .inline {
