--- a/app/views/decks.erb
+++ b/app/views/decks.erb
@@ -1,15 +1,17 @@
 <h1>Get funky with flashcards</h1>
-
+<h2><%=@message%><h2>
   <%@decks.each do |deck|%>
         <a href='/round/<%=deck.id%>'><div class="deck"><%=deck.title%></div></a>
   <%end%>
 
 <div class="bottom">
   <a href="/">Home</a>
-  <%unless @my_decks %>
-    <a href="/user/decks">View My Decks</a>
-  <%else%>
-    <a href="/decks/edit">Edit decks</a>
+  <% unless @message %>
+    <%unless @my_decks %>
+      <a href="/user/decks">View My Decks</a>
+    <%else%>
+      <a href="/decks/edit">Edit decks</a>
+    <%end%>
   <%end%>
   <a href="/decks/create">Create Deck</a>
 </div>
