--- a/app/views/edit_deck.erb
+++ b/app/views/edit_deck.erb
@@ -1,3 +1,3 @@
 
 <a id="delete_deck" href="/decks/delete/<%= @deck.id%>"><i class="fa fa-trash-o"></i></a>
-<a href="/decks/add_card/<%= @deck.id%>"><i class="fa fa-plus-square"></i></a>
+<a id="add_card" href="/decks/add_card/<%= @deck.id%>"><i class="fa fa-plus-square"></i></a>
