--- a/public/css/application.css
+++ b/public/css/application.css
@@ -121,20 +121,25 @@ p {
 
 .deck {
   /*float:left;*/
+  width:242px;
+  height: 242px;
+  background: url(thebluecrown.png) no-repeat #1D0600;
+  color: #7C97EC;
+  background-position: center;
   display: inline-block;
   overflow: auto;
   margin:10px;
   text-align: center;
-  background-color: white;
-  width:30%;
-  height: 100px;
+ /* background-color: white;*/
+  /*width:30%;
+  height: 100px;*/
   border-radius:20px;
   font-size: 25px;
-  opacity: 0.7;
+  opacity: 0.5;
 }
 
 .deck:hover {
-  opacity: 1;
+  opacity: 0.7;
 }
 
 .deck a{
