added a bit of javascript magic to it

--- a/app/views/add_card.erb
+++ b/app/views/add_card.erb
@@ -1,4 +1,4 @@
-<h3>Please fill out the fields:</h3>
+<h3 class='title'>Please fill out the fields:</h3>
 <form action="/decks/add_card" method="POST">
   <label for"question">Question:</label><br>
   <input type="text" name = "card[question]" id="question"><br>
