--- a/app/views/create_deck.erb
+++ b/app/views/create_deck.erb
@@ -1,4 +1,4 @@
-<h3>Please give your deck a name:</h3>
+<h3 class="title">Please give your deck a name:</h3>
 <% if @message %>
 <h3><%= @message%></h3>
 <%end%>
