--- a/app/views/decks.erb
+++ b/app/views/decks.erb
@@ -1,4 +1,4 @@
-<h1>Get funky with flashcards</h1>
+<h1 class="title">Get funky with flashcards</h1>
 <h2><%=@message%><h2>
   <%@decks.each do |deck|%>
         <a href='/round/<%=deck.id%>'><div class="deck"><%=deck.title%></div></a>
