--- a/app/views/decks_to_edit.erb
+++ b/app/views/decks_to_edit.erb
@@ -1,4 +1,4 @@
-<h1>Choose a deck to edit:</h1>
+<h1 class="title">Choose a deck to edit:</h1>
 
 <% @decks.each do |deck| %>
 <a class="edit" href="/decks/edit/<%=deck.id%>"><div class="deck"><%= deck.title %></div></a><div class="edit_links"></div>
