--- a/app/views/start_round.erb
+++ b/app/views/start_round.erb
@@ -1,5 +1,5 @@
 <div id = "game">
-  <h1><%= session[:deck_title]%></h1>
+  <h1 class="title"><%= session[:deck_title]%></h1>
 
   <div class="bottom">
     <a href ="/round/card/<%=Card.find(session[:cards].pop).id%>">Get question</a>
