--- a/app/views/sign_up.erb
+++ b/app/views/sign_up.erb
@@ -1,12 +1,15 @@
-<form action="/user/create" method="post">
-  <label for="user_name">Username:</label><br>
-  <input type="text" name="user[user_name]" id="user_name"><br>
-  <label for="password">Password:</label><br>
-  <input type="password" name="user[password]" id="password"><br>
+<div class="slide">
+  <h1>Please fill in the fields:</h1>
+  <form action="/user/create" method="post">
+    <label for="user_name">Username:</label><br>
+    <input type="text" name="user[user_name]" id="user_name"><br>
+    <label for="password">Password:</label><br>
+    <input type="password" name="user[password]" id="password"><br>
 
-  <input type="submit" value="submit">
+    <input type="submit" value="submit">
 
-</form><br><br>
-<div class="bottom">
-  <a href="/">Home</a>
+  </form><br><br>
+  <div class="bottom">
+    <a href="/">Home</a>
+  </div>
 </div>
