--- a/app/views/decks.erb
+++ b/app/views/decks.erb
@@ -1,4 +1,4 @@
-<h1 class="title">Get funky with flashcards</h1>
+<h1 class="slide">Get funky with flashcards</h1>
 <h2><%=@message%><h2>
   <%@decks.each do |deck|%>
         <a href='/round/<%=deck.id%>'><div class="deck"><%=deck.title%></div></a>
@@ -18,3 +18,13 @@
 
 
 
+<script type="text/javascript">
+  $('.deck').on('click', function(){
+    var $c = this
+    var ctx=c.getContext("2d");
+    ctx.rotate(20*Math.PI/180, 'slow');
+    ctx.fillRect(50,20,100,50); 
+  })
+
+
+</script>
