--- a/app/views/run_card.erb
+++ b/app/views/run_card.erb
@@ -1,13 +1,17 @@
 <h1><%= session[:deck_title]%></h1>
+
+<div class='slide'>
+
+
   <%if session[:previous_answer]%>
-    <p class="title">You got the last one right!</p>
+    <p>You got the last one right!</p>
   <%elsif session[:previous_answer] == false%>
-    <p class="title">You got the last one wrong!</p>
+    <p>You got the last one wrong!</p>
   <%end%>
 
 
 
-<div class='title'>
+
 <%unless @card%>
   <p>That was your last question!!!!</p>
   <a id="view_stats" style="" href="/round/stats">See Your Game Stats</a>
