does not let you submit unless some value has been typed in

--- a/app/views/run_card.erb
+++ b/app/views/run_card.erb
@@ -22,7 +22,9 @@
     <label for="answer">Answer:</label><br>
     <input type="text" name="answer" id="answer">
     <input type="text" name="correct" value="<%=@card.answer%>" class="invisible">
-    <input type="submit" value="submit">
+    <p class="submit">
+      <input type="submit" value="submit">
+    </p>
   </form>
 
 </div>
