--- a/app/views/add_card.erb
+++ b/app/views/add_card.erb
@@ -5,7 +5,9 @@
   <label for"answer">Answer:</label><br>
   <input type="text" name="card[answer]" id="answer"><br>
   <input type="text" name="card[deck_id]" value="<%=@deck_id%>" class="invisible">
-  <br><input type="submit" value="submit">
+  <p class="submit">
+    <br><input type="submit" value="submit">
+  </p>
 </form>
 
 <% if @has_card%>
