--- a/app/views/create_deck.erb
+++ b/app/views/create_deck.erb
@@ -6,5 +6,7 @@
   <label for"title">Title:</label><br>
   <input type="text" name="deck[title]" id="title" autofocus><br>
   <input type="text" name="deck[user_id]" value= "<%=@user_id%>" class="invisible">
-  <br><input type="submit" value="submit">
+  <p class="submit">
+    <br><input type="submit" value="submit">
+  </p>
 </form>
