--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -11,7 +11,9 @@
       <input type="text" name="user[user_name]" id="user_name" autofocus><br>
       <label for="password">Password:</label><br>
       <input type="password" name="user[password]" id="password"><br>
-      <input type="submit" value="submit" class="submit">
+      <p class="submit">
+        <input type="submit" value="submit" class="submit">
+      </p>
     </form><br><br>
     <div class="bottom">
       <a href="/user/create" class ="sign_up">Sign Up</a>
