--- a/app/views/sign_up.erb
+++ b/app/views/sign_up.erb
@@ -5,8 +5,9 @@
     <input type="text" name="user[user_name]" id="user_name"><br>
     <label for="password">Password:</label><br>
     <input type="password" name="user[password]" id="password"><br>
-
-    <input type="submit" value="submit">
+    <p class="submit">
+      <input type="submit" value="submit">
+    </p>
 
   </form><br><br>
   <div class="bottom">
