--- a/app/views/add_card.erb
+++ b/app/views/add_card.erb
@@ -3,7 +3,7 @@
   <label for"question">Question:</label><br>
   <input type="text" name = "card[question]" id="question"><br>
   <label for"answer">Answer:</label><br>
-  <input type="text" name="card[answer]" id="answer"><br>
+  <input type="text" class="required" name="card[answer]" id="answer"><br>
   <input type="text" name="card[deck_id]" value="<%=@deck_id%>" class="invisible">
   <p class="submit">
     <br><input type="submit" value="submit">
