--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -8,9 +8,9 @@
 
     <form action="/user/login" method="get">
       <label for="user_name">Username:</label><br>
-      <input type="text" name="user[user_name]" id="user_name" autofocus><br>
+      <input type="text" class="required" name="user[user_name]" id="user_name" autofocus><br>
       <label for="password">Password:</label><br>
-      <input type="password" name="user[password]" id="password"><br>
+      <input type="password" class="required" name="user[password]" id="password"><br>
       <p class="submit">
         <input type="submit" value="submit" class="submit">
       </p>
