--- a/app/views/sign_up.erb
+++ b/app/views/sign_up.erb
@@ -2,9 +2,9 @@
   <h1>Please fill in the fields:</h1>
   <form action="/user/create" method="post">
     <label for="user_name">Username:</label><br>
-    <input type="text" name="user[user_name]" id="user_name"><br>
+    <input type="text" class="required" name="user[user_name]" id="user_name"><br>
     <label for="password">Password:</label><br>
-    <input type="password" name="user[password]" id="password"><br>
+    <input type="password" class="required" name="user[password]" id="password"><br>
     <p class="submit">
       <input type="submit" value="submit">
     </p>
