Users can edit and delete individual cards from their deck
Users can now edit and delete cards from decks they have made. They cannot add or delete cards from other people's decks.

--- a/app/views/decks_to_edit.erb
+++ b/app/views/decks_to_edit.erb
@@ -6,6 +6,7 @@
   <div class="edit_links">
     <a id="delete_deck" href="/decks/delete/<%= deck.id%>"><i class="fa fa-trash-o"></i></a>
     <a id="add_card" href="/decks/add_card/<%= deck.id%>"><i class="fa fa-plus-square"></i></a>
+    <a id="edit_cards" href="/decks/<%= deck.id%>/cards/edit"><i class="fa fa-minus-square"></i></a>
   </div>
 <div>
 <% end %>
