--- a/public/css/application.css
+++ b/public/css/application.css
@@ -227,3 +227,14 @@ p {
   border: 2px solid #BDBFBF;
   border-radius: 5px;
 }
+
+@media (max-width:1100px) {
+  .nav h1 {
+    font-size:5em;
+  }
+  .nav a {
+    margin:5px;
+    font-size:2em;
+  }
+}
+
